[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
log = "0.4.14"
num_enum = "0.5.4"
phf = { version = "0.11.1", features = ["macros"] }
simple_logger = "1.15.0"
structopt = "0.3.25"
thiserror = "1.0.30"

[features]

[dev-dependencies]
test-case = "2.2.2"
